--- a/index.html
+++ b/index.html
@@ -1,76 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="CSS Grid practice">
+<meta name="keywords" content="Html, Javascript, CSS">
+<meta name="author" content="Daniel Sisovic">
+<title>FM - Testimonials Grid</title>
+<link rel="stylesheet" href="./styles/index.css">
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
 <body>
-  Daniel Clifford
-  Verified Graduate
-
-  I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-  in the company I joined. I honestly feel I got every penny’s worth.
-
-  “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-  transition and have heard some people who had an amazing experience here. I signed up 
-  for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-  The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-  the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-
-  Jonathan Walters
-  Verified Graduate
-
-  The team was very supportive and kept me motivated
-
-  “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-  for a big company. This was one of the best investments I’ve made in myself. ”
-
-  Jeanette Harmon
-  Verified Graduate
-
-  An overall wonderful and rewarding experience
-
-  “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-  while doing something I love. ”
-
-  Patrick Abrams
-  Verified Graduate
-
-  Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-  learning from their experiences was easy.
-
-  “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-  gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-  junior developer. The standard is above the rest. You will get the personal attention you need from 
-  an incredible community of smart and amazing people. ”
-
-  Kira Whittle
-  Verified Graduate
-
-  Such a life-changing experience. Highly recommended!
-
-  “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-  professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-  student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-  did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-  project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-  could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-  experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-  100% recommend! ”
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="main">
+    <div class="block block__top-left">
+      <div class="block__top-left--user">
+        <img src="./images/image-daniel.jpg" alt="user-daniel">
+        <div class="block__top-left--user-text">
+          <h6>Daniel Clifford</h6>
+          <p>Verified Graduate</p>
+        </div>
+      </div>
+      <div class="block__top-left--quote">
+        <h5>I received a job offer mid-course, and the subjects I learned
+          were currently, if not more so, in the company, I joined. I
+          honestly feel I got every penny's worth.
+        </h5>
+      </div>
+      <div class="block__top-left--conclusion">
+        <h5>"I was an EMT for many years before I joined the bootcamp. I've been looking to make a
+          transition and have heard some people who had an amazing experience here. I signed up for
+          the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12
+          weeks was the best - and most grueling - time of my life. Since completing the course, I've
+          successfully switched careers, working as Software Engineer at a VR startup."
+        </h5>
+      </div>
+    </div>
+    <div class="block block__top-middle">
+      <div class="block__top-middle--user">
+        <img src="./images/image-jonathan.jpg" alt="user-jonathan">
+        <div class="block__top-middle--user-text">
+          <h6>Jonathan Walters</h6>
+          <p>Verified Graduate</p>
+        </div>
+      </div>
+      <div class="block__top-middle--quote">
+        <h5>The team was very supportive and kept me motivated</h5>
+      </div>
+      <div class="block__top-middle--conclusion">
+        <h5>"I started as a total newbie with
+          virtually no coding skills. I now work
+          as mobile engineer for a big
+          company. This was one of the best
+          investments I've made in myself."
+        </h5>
+      </div>
+    </div>
+    <div class="block block__end">
+      <div class="block__end--user">
+        <img src="./images/image-kira.jpg" alt="user-kira">
+        <div class="block__end--user-text">
+          <h6>Kira Whittle</h6>
+          <p>Verified Graduate</p>
+        </div>
+      </div>
+      <div class="block__end--quote">
+        <h5>Such a life-changing
+          experience. Highly
+          recommended!
+        </h5>
+      </div>
+      <div class="block__end--conclusion">
+        <h5>"Before joining the bootcamp, I've
+          never written a line of code. I needed
+          some structure from professionals
+          who can help me learn programming
+          step by step. I was encouraged to
+          enroll by a former student of theirs
+          who can only say wonderful things
+          about the program. The entire
+          curicculum and stuff did not
+          dissapoint. They were very hands-on
+          and I never had to wait long for
+          assistance. The agile team project, in
+          particular, was outstanding. It took
+          my learning to the next level in a way
+          that no tutorial could ever have. In
+          fact, I've often referred to it during
+          interviews as an example of my
+          development experience. It certainly
+          helped me land a job as a full-stack
+          developer after receiving multiple
+          offers. 100% recommend."
+        </h5>
+      </div>
+    </div>
+    <div class="block block__bottom-left">
+      <div class="block__bottom-left--user">
+        <img src="./images/image-jeanette.jpg" alt="user-jeanette">
+        <div class="block__bottom-left--user-text">
+          <h6>Jeanette Harmon</h6>
+          <p>Verified Graduate</p>
+        </div>
+      </div>
+      <div class="block__bottom-left--quote">
+        <h5>An overall wonderful
+          and rewarding
+          experience
+        </h5>
+      </div>
+      <div class="block__bottom-left--conclusion">
+        <h5>"Thank you for the wonderful
+          experience! I now have a job I really
+          enjoy, and make a good living while
+          doing something I love."
+        </h5>
+      </div>
+    </div>
+    <div class="block block__bottom-right">
+      <div class="block__bottom-right--user">
+        <img src="./images/image-patrick.jpg" alt="user-patrick">
+        <div class="block__bottom-right--user-text">
+          <h6>Patrick Abrams</h6>
+          <p>Verified Graduate</p>
+        </div>
+      </div>
+      <div class="block__bottom-right--quote">
+        <h5>Awesome teaching support from TAs who did the bootcamp
+          themselves. Getting guidance from them and learning
+          from ther experiences was easy.
+        </h5>
+      </div>
+      <div class="block__bottom-right--conclusion">
+        <h5>"The staff seem genuenly concerned about my progress which I find really refreshing. The
+          program gave me the confidence necessary to be able to go out in the world and present
+          myself as capable junior developer. The standard is above the rest. You will get
+          personal attention you need from and incredible community of smart and amazing people."
+        </h5>
+      </div>
+    </div>
   </div>
 </body>
+
 </html>
